--- a/main.css
+++ b/main.css
@@ -1,10 +1,14 @@
+
 body {
   font-family: 'Roboto', sans-serif;
   font-weight: 300;
+  line-height: 1.6em;
 }
 
-header {
-  padding: 20px 0;
+#article{
+  display: flex;
+  align-items: center;
+  margin: 0;
 }
 
 header .row,
@@ -62,6 +66,11 @@ section .row img {
   margin: 0 0 30px;
 }
 
+#Bethany img {
+  max-width:18em;
+  height:auto;
+}
+
 .btn.btn-primary {
   border-radius: 2px;
   border: 0px;
@@ -100,6 +109,11 @@ section .row img {
   height:18em;
 }
 
+.article .col-sm-8 {
+  float: none;
+  margin: 0 auto;
+}
+
 footer {
   font-size: 12px;
   padding: 20px 0;
@@ -118,3 +132,4 @@ footer li img {
   width: 32px;
   height: 32px;
 }
+
