--- a/main.css
+++ b/main.css
@@ -23,6 +23,7 @@ header h1 {
 
 header nav {
   display: flex;
+  float: right;
   justify-content: flex-end;
   font-size: 1.5em;
 }
@@ -37,26 +38,26 @@ header p {
   align-items: center;
   background-image: url('https://w-dog.net/wallpapers/14/14/409330437622484/mood-morning-morning-table-summer-cup-saucer-smartphone-headphones-book-book-book-knowledge-teaching-light-and-ignorance-is-darkness-good-idea-positive-background-blur-bokeh-wallpaper.jpg');
   background-size: cover;
-  color: #ffffff;
+  color: #7c12a7;
   height: 500px;
   text-shadow: 0.25px 0.25px 0.25px #000000;
 }
 
 .jumbotron h2, h3{
   padding: 0 5em;
-  margin: 4em;
 }
 
 .jumbotron h2 {
   padding-bottom: 0.5em;
-  font-size: 3em;
+  font-size: 2.5em;
   font-weight: 700;
-  margin: 0;
+  color: white;
 }
 
 .jumbotron h3 {
-  margin: 0 0 20px;
-  font-size: 1.50em;
+  margin: 0 2em 0 2em;
+  font-size: 1.25em;
+  font-weight: 300;
 }
 
 section .row img {
@@ -79,6 +80,7 @@ section .row img {
   color: #fbd1d5;
   text-shadow: none;
   background-color: #ffffff;
+  margin-top: 20px;
 }
 
 .btn.btn-primary:hover {
@@ -135,3 +137,28 @@ footer li img {
   height: 32px;
 }
 
+.navbar{
+  background-color: #7c12a7;
+  color: white;
+  padding-bottom: 1em;
+  margin: 0;
+}
+
+.navbar-inverse .navbar-brand{
+  color: white;
+}
+
+.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover{
+  background-color: rgb(156, 103, 156);
+}
+
+.navbar p{
+  color: white;
+  font-size: .6em;
+  margin: 0;
+  padding: 5px;
+}
+
+.navbar-brand {
+  font-size: 1.5em;
+}
