--- a/main.css
+++ b/main.css
@@ -78,7 +78,7 @@ section .row img {
 .btn.btn-primary {
   border-radius: 2px;
   border: 0px;
-  color: #fbd1d5;
+  color: #7c12a7;
   text-shadow: none;
   background-color: #ffffff;
   margin-top: 20px;
@@ -86,7 +86,7 @@ section .row img {
 
 .btn.btn-primary:hover {
   color: #ffffff;
-  background-color: #fbd1d5;
+  background-color: #7c12a7;
 }
 
 .btn-secondary {
