contact form update

--- a/main.css
+++ b/main.css
@@ -221,3 +221,9 @@ textarea {
      -moz-box-sizing: border-box; /* For legacy (Firefox <29) Gecko based browsers */
           box-sizing: border-box;
 }
+
+.navbar-inverse .navbar-brand:hover, 
+.navbar-inverse .navbar-brand:focus {
+  background-color: transparent;
+  color: #7c12a7;
+}
