updated color to blue

--- a/main.css
+++ b/main.css
@@ -45,7 +45,7 @@ header p {
   align-items: center;
   background-image: url('pile-of-books_0.jpg');
   background-size: cover;
-  color: #7c12a7;
+  color: #1f50b9;
   height: auto;
   text-shadow: 0.25px 0.25px 0.25px white;
   padding-right: 20%;
@@ -83,7 +83,7 @@ section .row img {
 .btn.btn-primary {
   border-radius: 2px;
   border: 0px;
-  color: #7c12a7;
+  color: #1f50b9;
   text-shadow: none;
   background-color: #ffffff;
   margin-top: 20px;
@@ -91,7 +91,7 @@ section .row img {
 
 .btn.btn-primary:hover {
   color: #ffffff;
-  background-color: #7c12a7;
+  background-color: #1f50b9;
 }
 
 .btn-secondary {
@@ -145,13 +145,13 @@ footer li img {
 
 .navbar{
   background-color: white;
-  color: #7c12a7;
+  color: #1f50b9;
   padding-bottom: 1em;
   margin: 0;
 }
 
 .navbar-inverse .navbar-brand{
-  color: #7c12a7;
+  color: #1f50b9;
 }
 
 .navbar-inverse .navbar-nav {
@@ -159,16 +159,16 @@ footer li img {
 }
 
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:focus, .navbar-inverse .navbar-nav>.active>a:hover{
-  background-color: rgb(156, 103, 156);
+  background-color: rgb(70, 88, 145);
 }
 
 .navbar-inverse .navbar-nav>li>a:hover
 {
-  color:#7c12a7;
+  color:#1f50b9;
 }
 
 .navbar p{
-  color: #7c12a7;
+  color: #1f50b9;
   font-size: .5em;
   margin-bottom: 5px;
 }
@@ -230,11 +230,11 @@ textarea {
 .navbar-inverse .navbar-brand:hover, 
 .navbar-inverse .navbar-brand:focus {
   background-color: transparent;
-  color: #7c12a7;
+  color: #1f50b9;
 }
 
 .navbar-inverse .navbar-toggle .icon-bar {
-  background-color: #7c12a7;
+  background-color: #1f50b9;
 }
 
 @viewport {
