--- a/main.css
+++ b/main.css
@@ -53,6 +53,9 @@ header p {
   font-size: 100%;
 }
 
+a:link {color: #1f50b9;}
+a:visited {color: #1f50b9;}
+
 .jumbotron h2 {
   padding-bottom: 0.5em;
   font-size: 2.5em;
